--- a/layouts/_nav.html
+++ b/layouts/_nav.html
@@ -1,27 +1,28 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
+<div id="wrap">
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
 
 
-      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
+        <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
 
-      <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="<%=rootUrl%>/index.html"><img src="<%=rootUrl%>/images/cmep-logo3.png" style="height:20px;padding:0px 5px 0px 0px"/>Cambridge Mathematics</a>
+        <!-- Be sure to leave the brand out there if you want it shown -->
+        <a class="brand" href="<%=rootUrl%>/index.html"><img src="<%=rootUrl%>/images/cmep-logo3.png" style="height:20px;padding:0px 5px 0px 0px"/>Cambridge Mathematics</a>
 
-      <!-- Everything you want hidden at 940px or less, place within here -->
-      <div class="nav-collapse collapse">
-        <!-- .nav, .navbar-search, .navbar-form, etc -->
-        <ul class="nav">
-          <li><a href="<%=rootUrl%>/map.html">Tube Map</a></li>
-          <li><a href="<%=rootUrl%>/pervasiveIdeasHome.html">Pervasive Ideas</a></li>
-          <li><a href="<%=rootUrl%>/resourceTypesHome.html">Resource Types</a></li>
-        </ul>
+        <!-- Everything you want hidden at 940px or less, place within here -->
+        <div class="nav-collapse collapse">
+          <!-- .nav, .navbar-search, .navbar-form, etc -->
+          <ul class="nav">
+            <li><a href="<%=rootUrl%>/map.html">Tube Map</a></li>
+            <li><a href="<%=rootUrl%>/pervasiveIdeasHome.html">Pervasive Ideas</a></li>
+            <li><a href="<%=rootUrl%>/resourceTypesHome.html">Resource Types</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
