fixed some CSS issues with the footer

--- a/layouts/_foot.html
+++ b/layouts/_foot.html
@@ -36,11 +36,15 @@
 
 </div> <!-- close #wrap -->
 <div id="footer">
-  <div class="container">
-    <p class="muted credit small">Unless indicated otherwise, these unpublished materials are currently under development and Copyright (©) University of Cambridge, Cambridge Mathematics Education Project (CMEP).  All rights reserved.</p>
-    <p><small>
-      These materials may only be used for CMEP internal developmental and testing purposes under the authority and supervision of the CMEP.  Otherwise, the materials may not be copied in whole or in part in any media or used in any manner or form.  Queries: email: cmep@maths.cam.ac.uk phone: 01223 337994.</small>
+  <div class="container muted">
+    <small>
+    <p class="credit small">
+      Unless indicated otherwise, these unpublished materials are currently under development and are copyright © University of Cambridge, Cambridge Mathematics Education Project (CMEP).  All rights reserved.
     </p>
+    <p>
+      These materials may only be used for CMEP internal developmental and testing purposes under the authority and supervision of the CMEP.  Otherwise, the materials may not be copied in whole or in part in any media or used in any manner or form.  Queries: email: cmep@maths.cam.ac.uk phone: 01223 337994.
+    </p>
+    </small>
   </div>
 </div>
 </body>
