--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -17,7 +17,7 @@ html, body {
   height: auto !important;
   height: 100%;
   /* Negative indent footer by its height */
-  margin: 0 auto -@footer-height;
+  margin: 0 auto;
   padding-top:80px;
 }
 
@@ -26,12 +26,26 @@ html, body {
 #footer {
   height: @footer-height;
   padding-top: 30px;
-  padding-bottom: 30px;
   overflow: scroll;
 }
 #footer {
-  background-color: #000;
-  color: white;
+  background-color: #444;
+  position:relative
+}
+#footer .container {
+  position:absolute;
+  top:30px;
+  bottom:20px;
+  left:0;
+  padding-left: 20px;
+  padding-right:20px;
+  max-width:750px;
+}
+
+/* pad content provided it comes immediately after the nav */
+.navbar-fixed-top + div {
+  /* border: 10px solid red; */
+  padding-bottom:20px;
 }
 
 @import "../bower_components/bootstrap/less/responsive.less"; // Don't forget to comment lines 22 to remove the second import call to **mixin.less**
@@ -210,7 +224,7 @@ figure {
     text-align: center;
     display: inline-block;
     max-width: 75%; 
-    margin: 10px auto @footer-height;
+    margin: 10px auto;
 }
 
 .grow1 figure {
