updated  A1 dependency test

--- a/layouts/_foot.html
+++ b/layouts/_foot.html
@@ -3,13 +3,14 @@
   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 <![endif]-->
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID.
 <script>
   var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
   (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
   g.src='//www.google-analytics.com/ga.js';
   s.parentNode.insertBefore(g,s)}(document,'script'));
 </script>
+-->
 
 <!-- build:js  <%=rootUrl%>/scripts/main.js -->
 <script src="<%=rootUrl%>/scripts/main.js"></script>
@@ -42,7 +43,7 @@
       Unless indicated otherwise, these unpublished materials are currently under development and are copyright © University of Cambridge, Cambridge Mathematics Education Project (CMEP).  All rights reserved.
     </p>
     <p>
-      These materials may only be used for CMEP internal developmental and testing purposes under the authority and supervision of the CMEP.  Otherwise, the materials may not be copied in whole or in part in any media or used in any manner or form.  Queries: email: cmep@maths.cam.ac.uk phone: 01223 337994.
+      These materials may only be used for CMEP internal developmental and testing purposes under the authority and supervision of the CMEP.  Otherwise, the materials may not be copied in whole or in part in any media or used in any manner or form. Queries: email: cmep@maths.cam.ac.uk phone: 01223 337994.
     </p>
     </small>
   </div>
