--- a/layouts/_foot.html
+++ b/layouts/_foot.html
@@ -35,17 +35,31 @@
 <script src="<%=rootUrl%>/bower_components/bootstrap/js/bootstrap-tab.js"></script>
 <!-- endbuild -->
 
-</div> <!-- close #wrap -->
+</div> <!-- close #wrap2 -->
+</div> <!-- close #wrap1 -->
+
 <div id="footer">
   <div class="container muted">
     <small>
-    <p class="credit small">
-      Unless indicated otherwise, these unpublished materials are currently under development and are copyright © University of Cambridge, Cambridge Mathematics Education Project (CMEP).  All rights reserved.
-    </p>
-    <p>
-      These materials may only be used for CMEP internal developmental and testing purposes under the authority and supervision of the CMEP.  Otherwise, the materials may not be copied in whole or in part in any media or used in any manner or form. Queries: email: cmep@maths.cam.ac.uk phone: 01223 337994.
-    </p>
+      <p class="credit">
+        Unless indicated otherwise, these unpublished materials are currently under development and are copyright © University of Cambridge, Cambridge Mathematics Education Project (CMEP).  All rights reserved.
+      </p>
+      <p>
+        These materials may only be used for CMEP internal developmental and testing purposes under the authority and supervision of the CMEP.  Otherwise, the materials may not be copied in whole or in part in any media or used in any manner or form. Queries: email: cmep@maths.cam.ac.uk phone: 01223 337994.
+      </p>
     </small>
+    <ul class="inline">
+      <li>
+        <a class="btn btn-mini btn-inverse" href="<%=rootUrl%>/privacy.html">
+          <span class="muted">CMEP Privacy Policy</span>
+        </a>
+      </li>
+      <li>
+        <a class="btn btn-mini btn-inverse" href="<%=rootUrl%>/cookies.html">
+          <span class="muted">CMEP Cookie Policy</span>
+        </a>
+      </li>
+    </ul>
   </div>
 </div>
 </body>
