--- a/layouts/_nav.html
+++ b/layouts/_nav.html
@@ -1,4 +1,4 @@
-<div id="wrap">
+<div id="wrap1"><div id="wrap2">
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
@@ -6,9 +6,10 @@
 
         <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="muted"><i class="icon-arrow-down"></i> Menu</span>
+<!--           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+          <span class="icon-bar"></span> -->
         </a>
 
         <!-- Be sure to leave the brand out there if you want it shown -->
