--- a/layouts/resource.html
+++ b/layouts/resource.html
@@ -28,7 +28,7 @@
         <div class="tab-content">
 <%   _.each(content.parts, function(cdata, index) { %>
           <div class="tab-pane <%=index==0?'active':''%>" id="tab<%=index%>">
-            <%= cdata.html%>
+            <%= cdata.markup%>
           </div>
 <%   }); %>
         </div>
