sdded clearance indicator in fenman navbar

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -294,3 +294,12 @@ tr.odd {
   height: 40px;
 }
 
+.clearance {
+  color:orange;
+  display: inline;
+  float: left;
+  padding: 10px 20px 10px;
+  font-size: 16px;
+  font-weight: 200;
+}
+
