--- a/layouts/_nav.html
+++ b/layouts/_nav.html
@@ -7,13 +7,17 @@
         <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
           <span class="muted"><i class="icon-arrow-down"></i> Menu</span>
-<!--           <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span> -->
         </a>
 
         <!-- Be sure to leave the brand out there if you want it shown -->
         <a class="brand" href="<%=rootUrl%>/index.html"><img src="<%=rootUrl%>/images/cmep-logo3.png" style="height:20px;padding:0px 5px 0px 0px"/>Cambridge Mathematics</a>
+
+<% if(grunt.clearanceLevel === 0) { %>
+        <span class="clearance">
+          clearance <%= meta.clearance ? meta.clearance : "undefined"  %>
+        </span>
+<% } %>
+
 
         <!-- Everything you want hidden at 940px or less, place within here -->
         <div class="nav-collapse collapse">
