centred lone figures better

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -259,7 +259,7 @@ figure img {
 
 figure {
     text-align: center;
-    display: inline-block;
+    display: block;
     max-width: 75%; 
     margin: 10px auto;
 }
