--- a/layouts/_head.html
+++ b/layouts/_head.html
@@ -17,6 +17,7 @@
   <!-- endbuild -->
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
+      TeX: { equationNumbers: { autoNumber: "AMS" } },
       tex2jax: {
         displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
         inlineMath: [ ['$','$'], ["\\(","\\)"] ],
