beginnings of addressable tabs; merged ed359 lodash_templates;

--- a/layouts/resource.html
+++ b/layouts/resource.html
@@ -23,6 +23,9 @@
           </li>
 <%   }); %>
         </ul>
+
+<script src="../../scripts/tabAddressing.js"></script>
+
 <% } %>
       
         <div class="tab-content">
@@ -82,6 +85,8 @@
 </div>
 
 <%= _foot %>
+
+
 
 <% grunt.log.ok("done"); %>
 
