--- a/layouts/resource.html
+++ b/layouts/resource.html
@@ -11,6 +11,10 @@
         <span class="<%= resourceTypeMeta.icon %>"></span> <%= resourceTypeMeta.title %>
       </h1>
 
+<% if(meta.title != null && _.isString(meta.title)) { %>
+      <h2><%= meta.title %></h2>
+<% } %>
+
       <div class="tabbable">
 
 <% if(content.parts.length > 1) {%>
