--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -221,15 +221,17 @@ a.highlight {
   height:600px;
 }
 
+@chalkColour: #0088CC;
+
 .chalk {
   font-family: "Chalkboard", "Comic Sans MS", sans-serif;
   opacity:0.8;
   font-size:1.2em;
-  color: orange;
+  color: @chalkColour;
   padding:20px;
   margin: 5px 0px;
   border-radius: 20px;
-  border: 3px dotted orange;
+  border: 3px dotted @chalkColour;
 }
 
 hr {
