added Delius as a web font, closing #59

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -224,9 +224,9 @@ a.highlight {
 @chalkColour: #0088CC;
 
 .chalk {
-  font-family: "Chalkboard", "Comic Sans MS", sans-serif;
+  font-family: "Delius", "Chalkboard", "Comic Sans MS", sans-serif;
   opacity:0.8;
-  font-size:1.2em;
+  font-size:1.1em;
   color: @chalkColour;
   padding:20px;
   margin: 5px 0px;
