--- a/layouts/_head.html
+++ b/layouts/_head.html
@@ -9,6 +9,7 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Delius">
   <!-- Place favicon.ico and apple-touch-icon.png in the rootUrl directory -->
   <link rel="stylesheet" href="<%=rootUrl%>/styles/main.css">
   <!-- build:js <%=rootUrl%>/scripts/vendor/modernizr.js -->
