work in progress - reworking titles and pass2

--- a/layouts/resource.html
+++ b/layouts/resource.html
@@ -11,6 +11,11 @@
         <span class="<%= resourceTypeMeta.icon %>"></span> <%= resourceTypeMeta.title %>
       </h1>
 
+<% if(meta.title) { %>
+      <h2>
+        <%= meta.title %>
+      </h2>
+<% }%>
 
       <div class="tabbable">
 
