fixes #83. added min-height to stations, pis, and resources.

--- a/layouts/pervasiveIdea.html
+++ b/layouts/pervasiveIdea.html
@@ -5,7 +5,7 @@
 <% grunt.log.write("  pervasiveIdea layout "+meta.id+"... ") %>
 
 <div class="container-fluid">
-  <div class="row-fluid">
+  <div class="row-fluid not-short">
 
 
     <div id="sidebar" class="span3">
