--- a/layouts/station.html
+++ b/layouts/station.html
@@ -3,7 +3,7 @@
 <% _ = grunt.util._ %>
 <% grunt.log.write("  station layout "+meta.id+"... ") %>
 <div class="container-fluid">
-  <div class="row-fluid">
+  <div class="row-fluid not-short">
     <div id="sidebar1" class="station span4">
 
       <div class="signage">
