added test for EQ lastUpdated

--- a/layouts/resource.html
+++ b/layouts/resource.html
@@ -109,6 +109,8 @@
 <% if(meta.lastUpdated) { %>
       <span class="small muted pull-right">Last updated <%= meta.lastUpdated %></span>
 <% } %>
+
+  <div class="draft">Draft</div>
 </div>
 
 
