fixes #88. Also adds DRAFT overfaly for level 0 resources

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -321,3 +321,17 @@ tr.odd {
   padding: 5px 0px;
 }
 
+a.accordion-list-item:hover {
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.draft {
+  position: absolute;
+  font-size: 100pt;
+  top: 20%;
+  left: 20%;
+  opacity: 0.1;
+  .rotate(-45deg);
+}
