SVG inserted, popover location slightly wrong

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -253,7 +253,7 @@ hr:after {
     background: white;
 }
 
-figure img {
+figure img, figure svg {
     display:inline-block;
     width: 100%;
     zoom: 80%;
@@ -313,3 +313,7 @@ tr.odd {
   font-weight: 200;
 }
 
+svg [id^="node"]:hover {
+  text-decoration:underline;
+  cursor: pointer;
+}
