--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -318,6 +318,17 @@ svg [id^="node"]:hover {
   cursor: pointer;
 }
 
+svg { 
+  -webkit-touch-callout: none; 
+  -webkit-user-select: none; 
+  -khtml-user-select: none;
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none; 
+}
+
+.popover {  }
+
 .not-short {
   min-height:900px;
 }
