Improved CSS and fixed popover positioning

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -256,7 +256,7 @@ hr:after {
 figure img, figure svg {
     display:inline-block;
     width: 100%;
-    zoom: 80%;
+    height:100%;
 }
 
 figure {
@@ -327,8 +327,6 @@ svg {
   user-select: none; 
 }
 
-.popover {  }
-
 .not-short {
   min-height:900px;
 }
@@ -351,3 +349,5 @@ a.accordion-list-item:hover {
   opacity: 0.1;
   .rotate(-45deg);
 }
+
+.popover { z-index: 1040; }
