--- a/layouts/map.html
+++ b/layouts/map.html
@@ -43,7 +43,8 @@ $(document).ready(function() {
         title: "Hi!",
         content: "popover",
         container:"body",
-        trigger: "hover"
+        trigger: "hover",
+        placement: "top"
       });
     });
   }
