--- a/app-sources/styles/main.less
+++ b/app-sources/styles/main.less
@@ -355,6 +355,6 @@ a.accordion-list-item:hover {
   z-index: 1040; 
 }
 
-popover-title, popover-content { 
-  display:none;
+.popover.in {
+  opacity: 1;
 }
