fixes #103. IE blows away another 2 hours of my life...

--- a/app-sources/styles/main.less
+++ b/app-sources/styles/main.less
@@ -266,6 +266,12 @@ figure {
     margin: 10px auto;
 }
 
+#map {
+  display:inline-block;
+  width: 100%;
+  height:1000px;
+}
+
 .grow1 figure {
   max-width: 50%;
 }
