--- a/layouts/map.html
+++ b/layouts/map.html
@@ -16,6 +16,7 @@
   </div>
 </div>
 
+<script type="text/javascript" src="scripts/underscore-min.js"></script>
 <script type="text/javascript" src="scripts/map.js"></script>
 
 <%= _foot %>
