--- a/layouts/_nav.html
+++ b/layouts/_nav.html
@@ -25,6 +25,9 @@
             <li><a href="<%=rootUrl%>/map.html">Tube Map</a></li>
             <li><a href="<%=rootUrl%>/pervasiveIdeasHome.html">Pervasive Ideas</a></li>
             <li><a href="<%=rootUrl%>/resourceTypesHome.html">Resource Types</a></li>
+<% if(grunt.clearanceLevel <= 1) { %>
+            <li><a href="<%=rootUrl%>/resources/contributing/index.html">Contributor's guide</a></li>  
+<% } %>            
           </ul>
         </div>
       </div>
