Updated styles for popovers

--- a/app-sources/styles/main.less
+++ b/app-sources/styles/main.less
@@ -364,3 +364,11 @@ a.accordion-list-item:hover {
 .popover.in {
   opacity: 1;
 }
+
+.popover ul.inline {
+  display: inline;
+}
+
+.popover ul.inline li {
+  padding-left:0px;
+}
