Even more popover styling

--- a/app-sources/styles/main.less
+++ b/app-sources/styles/main.less
@@ -368,3 +368,11 @@ a.accordion-list-item:hover {
 .popover ul.inline {
   display: inline;
 }
+
+.popover ul.inline li {
+  padding-left: 0px; 
+}
+
+h3.popover-title {
+  padding-left: 0px;
+}
