popover line in class so we can play more

--- a/app-sources/styles/main.less
+++ b/app-sources/styles/main.less
@@ -377,6 +377,6 @@ a.accordion-list-item:hover {
 h3.popover-title {
   padding-left: 0px;
   span.line {
-    display:none;
+    display:inline;
   }
 }
