removed popover lines again, and made title bar white

--- a/app-sources/styles/main.less
+++ b/app-sources/styles/main.less
@@ -376,7 +376,11 @@ a.accordion-list-item:hover {
 
 h3.popover-title {
   padding-left: 0px;
+  background-color: #fff;
+  border: none;
+
+
   span.line {
-    display:inline;
+    display:none  ;
   }
 }
