--- a/app-sources/styles/main.less
+++ b/app-sources/styles/main.less
@@ -374,9 +374,11 @@ a.accordion-list-item:hover {
   display: inline;
 }
 
-h3.popover-title {
+h3.popover-title, h3.onmap {
+  background-color: #fff;
+  border: none;
   padding-left: 0px;
   span.line {
-    display:inline;
+    display:none;
   }
 }
