Fixed map.js problems. Fixed mapScript reload in Gruntfile.

--- a/layouts/map.html
+++ b/layouts/map.html
@@ -17,6 +17,7 @@
 </div>
 
 <script type="text/javascript" src="scripts/underscore-min.js"></script>
+<script type="text/javascript" src="scripts/jquery.scrollintoview.min.js"></script>
 <script type="text/javascript" src="scripts/map.js"></script>
 
 <%= _foot %>
