--- a/layouts/station.html
+++ b/layouts/station.html
@@ -68,7 +68,8 @@
 <% _.each(meta.R1s, function(res) {%>
 <% var resourceTypeMeta = sources.resourceTypes[res.rt].meta; %>
         <li>
-          <span class="maybe icon-thumbs-up <%=res.highlight ? 'highlight' : ''%>"></span>
+<!--           <span class="maybe icon-thumbs-up <%=res.highlight ? 'highlight' : ''%>"></span>
+ -->
           <span class="<%=resourceTypeMeta.icon%>"></span>
           <a href="<%=resourcesUrl%>/<%=res.id%>/index.html" class="<%=res.highlight ? 'highlight' : ''%>">
             <%=resourceTypeMeta.title%>
