--- a/layouts/pervasiveIdeasHome.html
+++ b/layouts/pervasiveIdeasHome.html
@@ -16,7 +16,8 @@
         <div class="accordion-group">
 
           <div class="accordion-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#piMenu" href="#fam<%=f.family%>">
+            <!-- #piMenu -->
+            <a class="accordion-toggle" data-toggle="collapse" data-target="#fam<%=f.family%>" href="#fam<%=f.family%>">
               <%=f.family%>
             </a>
           </div>
