fixes #68 and #73 - acknowledgment texts in resources

--- a/app-sources/styles/main.less
+++ b/app-sources/styles/main.less
@@ -356,6 +356,10 @@ a.accordion-list-item:hover {
   .rotate(-45deg);
 }
 
+.node {
+  cursor: pointer;
+}
+
 .popover { 
   /* Needs to be this high to overlap top bar */
   z-index: 1040; 
