happy: lowercased less styles for lines and stations
allowing strings in stids and pvids rather than arrays

--- a/app-sources/styles/lineVars.less
+++ b/app-sources/styles/lineVars.less
@@ -1,11 +1,12 @@
-@linecolorA: #9467bd;
-@linecolorC: #bcbd22;
-@linecolorCN: #ff7f0e;
-@linecolorDE: #000000;
-@linecolorE: #1f77b4;
-@linecolorF: #2ca02c;
-@linecolorG: #d62728;
-@linecolorM: #7f7f7f;
-@linecolorNA: #17becf;
-@linecolorP: #8c564b;
-@linecolorV: #e377c2;
+@linecolora: #9467bd;
+@linecolorc: #bcbd22;
+@linecolorcn: #ff7f0e;
+@linecolorde: #000000;
+@linecolore: #1f77b4;
+@linecolorf: #2ca02c;
+@linecolorg: #d62728;
+@linecolorm: #7f7f7f;
+@linecolorna: #17becf;
+@linecolorp: #8c564b;
+@linecolorv: #e377c2;
+@linecolorn: #ff9896;
