--- a/app-sources/styles/lines.less
+++ b/app-sources/styles/lines.less
@@ -1,33 +1,36 @@
-.buttonA {
-  .button-line(@linecolorA)
+.buttona {
+  .button-line(@linecolora)
 }
-.buttonC {
-  .button-line(@linecolorC)
+.buttonc {
+  .button-line(@linecolorc)
 }
-.buttonCN {
-  .button-line(@linecolorCN)
+.buttoncn {
+  .button-line(@linecolorcn)
 }
-.buttonDE {
-  .button-line(@linecolorDE)
+.buttonde {
+  .button-line(@linecolorde)
 }
-.buttonE {
-  .button-line(@linecolorE)
+.buttone {
+  .button-line(@linecolore)
 }
-.buttonF {
-  .button-line(@linecolorF)
+.buttonf {
+  .button-line(@linecolorf)
 }
-.buttonG {
-  .button-line(@linecolorG)
+.buttong {
+  .button-line(@linecolorg)
 }
-.buttonM {
-  .button-line(@linecolorM)
+.buttonm {
+  .button-line(@linecolorm)
 }
-.buttonNA {
-  .button-line(@linecolorNA)
+.buttonn {
+  .button-line(@linecolorn)
 }
-.buttonP {
-  .button-line(@linecolorP)
+.buttonna {
+  .button-line(@linecolorna)
 }
-.buttonV {
-  .button-line(@linecolorV)
+.buttonp {
+  .button-line(@linecolorp)
+}
+.buttonv {
+  .button-line(@linecolorv)
 }
